syntax = "proto3";
package production_task;
option go_package = "production_task_local.v1;production_task";

import "google/protobuf/timestamp.proto";

message RequestTaskParams {
  string part_name = 1;
  int32 skl_id = 2;
  google.protobuf.Timestamp date_start = 3;
  google.protobuf.Timestamp date_end = 4;
  string search = 5;
  int32 page = 6;
  int32 count = 7;
}

service ProductionTaskService {
  rpc GetTasks(RequestTaskParams) returns (ProductsResponse);
  rpc GetTasksInPartName(RequestTaskParams) returns (ProductsResponse);
  rpc RecordInMsSQL(IDsRequest) returns (EmptyResponse);
  rpc RecordOutMsSQL(IDsRequest) returns (EmptyResponse);
}

message Product {
  int64 id = 1;
  google.protobuf.Timestamp manufacturing_date = 2;
  string nomenclature = 3;
  int32 number_frame = 4;
  string part_name = 5;
  double weight_sp_kg = 6;
  double weight_gp_kg = 7;
}

message ProductsResponse {
  repeated Product data = 1;
  int32 total_page = 2;
}

message IDsRequest {
  repeated int64 ids = 1;
}

message EmptyResponse {}